Fix dark mode's consistency across pages
Added
  - Transition between modes

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+	transition: background-color 0.3s linear, color 0.1s linear;
+}
+
 body {
 	margin: 0;
 	font-family: "Plus Jakarta Sans";
